[gd_scene load_steps=11 format=2]

[ext_resource path="res://baddies/sprites/tardi2.png" type="Texture" id=1]
[ext_resource path="res://baddies/sprites/tardi3.png" type="Texture" id=2]
[ext_resource path="res://baddies/characters/BearDroppyBoi.gd" type="Script" id=3]
[ext_resource path="res://baddies/sprites/tardi1.png" type="Texture" id=4]
[ext_resource path="res://baddies/sprites/tardi5.png" type="Texture" id=5]
[ext_resource path="res://baddies/sprites/tardi4.png" type="Texture" id=6]
[ext_resource path="res://baddies/TurningHack.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "rush",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0318, 11.2155 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5625, 6.375 )

[node name="BearDroppyBoi" type="KinematicBody2D" groups=[
"Baddies",
]]
rotation = 3.14159
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.334028, 0.0596727 )
frames = SubResource( 1 )
animation = "rush"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.550016, 3.30066 )
shape = SubResource( 2 )

[node name="JumpCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -210, -300 )
collision_mask = 2

[node name="DamageHitBox" type="CollisionShape2D" parent="."]
position = Vector2( 0.3125, -1.5 )
shape = SubResource( 3 )

[node name="RearRayCast" type="RayCast2D" parent="."]
position = Vector2( -15.713, 1.213 )
enabled = true
cast_to = Vector2( 0, 20 )
script = ExtResource( 7 )

[node name="FrontRayCast" type="RayCast2D" parent="."]
position = Vector2( 15.713, 1.213 )
enabled = true
cast_to = Vector2( 0, 20 )
script = ExtResource( 7 )
